resources/css/scss/pages/_inner.scss
/* ... */
.about_template {

    .sec_title {
        @include media(min-width, 1024px) {
            display: none;
        }
    }
}


.media_flex {

    display: flex;
    align-content: flex-start;
    align-items: flex-start;

    .media_left {
        padding-right: 10px;
    }

    .media_body {
        width: auto;

        h3 {
            font-size: 13px !important;
            font-weight: 300 !important;
        }
    }
}

.banner_form_wrap {

    margin-top: 0;

    .gform_footer {
        margin-top: 0 !important;
    }

    .gform_button {

        &.button {
            background: $color-primary;
        }
    }
}

.gform_button,
.primary_button {

    &.button,
    a {
        width: 100% !important;
        min-width: 100% !important;
        font-family: $body-font-family;
        font-size: 16px;
        text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
        font-weight: 800;
        text-align: center;
        margin: 0 !important;
        border-radius: 0;

        &:after {
            content: "";
            background-size: 20px 10px;
            width: 20px;
            height: 10px;
            background-repeat: no-repeat;
            background-image: url(../img/icn-arrow-rw.svg);
            display: inline-block;
            margin-left: 10px;
        }
    }
}

.primary_button {
    padding: 20px 0;

    &.is-style-outline {

        a {

            text-shadow: none;
            border: 2px solid $color-primary !important;
            padding: 30px 0;

            &:after {
                color: $color-dark;
                background-image: url(../img/icn-arrow-r.svg);
            }

            &:hover {
                background-color: $color-primary !important;
                color: $color-white;

                &:after {
                    color: $color-white;
                    background-image: url(../img/icn-arrow-rw.svg);
                }

            }

        }

    }

    &.is-style-fill {

        a {

            text-shadow: none;
            background-color: $color-primary !important;

            &:after {
                color: $color-white;
                background-image: url(../img/icn-arrow-rw.svg);
            }

            &:hover {
                color: $color-black;
                border: 2px solid $color-primary !important;
                background-color: transparent !important;

                &:after {
                    color: $color-primary;
                    background-image: url(../img/icn-arrow-r.svg);
                }

            }

        }

    }

    &.find_more {
        padding: 30px 0;
    }

    @include media(min-width, 1024px) {
        &.find_more {
            width: 60% !important;
        }

        margin: 0 auto !important;

        a {
            padding: 20px 0;
        }
    }


}

.wp-block-embed__wrapper {
    iframe {
        width: 100%;
        height: 400px;

        @include media(max-width, 1023px) {
            height: 300px;
        }

        @include media(max-width, 375px) {
            height: 200px;
        }
    }
}

.ct_margin_bottom_40 {
    figure {
        margin-bottom: 3em !important;

        &.icn-recent {
            margin-bottom: 20px !important;
        }

        @include media(max-width, 375px) {

            margin-bottom: 5em !important;
        }
    }
}

.icon_blurb {

    .has-text-align-left {

        img {
            margin-right: 15px;
        }

    }

    @include media (max-width, 1023px) {
        padding-left: 20px;
        padding-right: 20px;
    }
}


.social_icons_wrap {
    .wp-block-group__inner-container {
        display: flex;
        padding: 0;
        flex-wrap: nowrap;

        figure {
            &.wp-block-image:not(:last-child) {
                margin-right: 25px;
            }

        }
    }

}

// Exclusive VIP Buyer page
.cta_desktop_box {

    .wp-block-media-text.small_media_text {
        grid-template-columns: 30px auto !important;
    }

}

.benefits_lists_column {
    @media only screen and (min-width:783px) and (max-width:1023px) {
        flex-basis: 100% !important;
    }
}

.benefits_list {

    .numbered_benefits {
        grid-template-columns: 48px auto !important;

        .wp-block-media-text__content {

            strong {
                color: #161f1e;
            }
        }
    }

    @media only screen and (min-width:783px) and (max-width:1023px) {
        .benefits_lists_column {
            flex-basis: 100%;
        }

        .wp-block-group__inner-container {
            padding-right: 0;
        }
    }
}

.img_bottom {
    margin-bottom: -30px;
}

.sec_form {
	p {
		&.has-text-color {
			opacity: 0.8;
		}
	}
}

// 2500 page
.\32 500-closing-costs_page {

    .sec_form {
        @media (min-width:600px) and (max-width:781px) {
            margin-right: 2em;
        }
    }

    .cta_desktop_box {
        @include media(min-width, 1024px) {
            margin-left: 30px;
        }

        .wp-block-group__inner-container {
            padding-left: 0;
            padding-right: 0;
        }

        &.mobile_only {
            .wp-block-group__inner-container {
                padding: 0 30px;
            }
        }

        &.desktop_only {
            .wp-block-group__inner-container {
                @include media(max-width, 1023px) {
                    margin-left: 30px;
                }
            }
        }
    }

    .intro_text_2500 {
        margin-right: 40px;

        @include media(max-width, 1024px) {
            margin-right: 30px;
        }

        @include media(max-width, 768px) {
            margin-right: 0;
        }

    }
}

// Thank You Pages
.font_size_20 {
	font-size: 20px;
	font-weight: 300;
}

.thank_you_referral_column {
	margin-top: 0;
	margin-bottom: 0;
	
	@include media (max-width, 1279px) {
		padding: 0 50px;
	}
	
	@include media (max-width, 480px) {
		padding: 0;
	}
	
	@include media (min-width, 1280px) {
		padding: 0 300px;
	}

}
/* ... */

